Added autocomplete functions for input in all forms, styled all inputs in all forms

--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -34,11 +34,13 @@
                         </div>
                         <div class="modal-body-meats">
                             <div id="add-slider-meats">
-                                <form>
-                                    <input type="text" name="category" value="Category"></br>
-                                    <input type="date" name="date" value="Date"></br>
-                                    <input type="text" name="market" value="Market"></br>
-                                    <input type="checkbox" name="perishable"><label for="perishable">Perishable?</label></br>
+                                <form id='form-meats' autocomplete='off'>
+                                    <div class='autocomplete' style='width:100%;'>
+                                        <input id='myMeatsInput' type="text" name="input-meats" placeholder="Enter a meat/legume">
+                                    </div>
+                                    </br>
+                                    <input type="date" name="date-of-meat" placeholder="Enter the date you bought your meat/legume">
+                                    </br>
                                     <input type="submit" value="Done">
                                 </form>
                             </div>
@@ -68,11 +70,13 @@
                         </div>
                         <div class="modal-body-grains">
                             <div id="add-slider-grains">
-                                <form>
-                                    <input type="text" name="category" value="Category"></br>
-                                    <input type="date" name="date" value="Date"></br>
-                                    <input type="text" name="market" value="Market"></br>
-                                    <input type="checkbox" name="perishable"><label for="perishable">Perishable?</label></br>
+                                <form id='form-grains' autocomplete='off'>
+                                    <div class='autocomplete' style='width:100%;'>
+                                        <input id='myGrainsInput' type="text" name="input-grains" placeholder="Enter a grain">
+                                    </div>
+                                    </br>
+                                    <input type="date" name="date-of-grains" placeholder="Enter the date you bought your grain">
+                                    </br>
                                     <input type="submit" value="Done">
                                 </form>
                             </div>
@@ -100,11 +104,13 @@
                         </div>
                         <div class="modal-body-dairy">
                             <div id="add-slider-dairy" class="add-slider">
-                                <form>
-                                    <input type="text" name="category" value="Category"></br>
-                                    <input type="date" name="date" value="Date"></br>
-                                    <input type="text" name="market" value="Market"></br>
-                                    <input type="checkbox" name="perishable"><label for="perishable">Perishable?</label></br>
+                                <form id='form-dairy' autocomplete='off'>
+                                    <div class='autocomplete' style='width:100%;'>
+                                        <input id='myDairyInput' type="text" name="input-dairy" placeholder="Enter a dairy product">
+                                    </div>
+                                    </br>
+                                    <input type="date" name="date-of-dairy" placeholder="Enter the date you bought your dairy product">
+                                    </br>
                                     <input type="submit" value="Done">
                                 </form>
                             </div>
@@ -132,11 +138,13 @@
                         </div>
                         <div class="modal-body-fruits">
                             <div id="add-slider-fruits">
-                                <form>
-                                    <input type="text" name="category" value="Category"></br>
-                                    <input type="date" name="date" value="Date"></br>
-                                    <input type="text" name="market" value="Market"></br>
-                                    <input type="checkbox" name="perishable"><label for="perishable">Perishable?</label></br>
+                                <form id='form-fruits' autocomplete='off'>
+                                    <div class='autocomplete' style='width:100%;'>
+                                        <input id='myFruitsInput' type="text" name="input-fruits" placeholder="Enter a fruit">
+                                    </div>
+                                    </br>
+                                    <input type="date" name="date-of-fruit" placeholder="Enter the date you bought your fruit">
+                                    </br>
                                     <input type="submit" value="Done">
                                 </form>
                             </div>
@@ -164,11 +172,13 @@
                         </div>
                         <div class="modal-body-vegetables">
                             <div id="add-slider-vegetables">
-                                <form>
-                                    <input type="text" name="category" value="Category"></br>
-                                    <input type="date" name="date" value="Date"></br>
-                                    <input type="text" name="market" value="Market"></br>
-                                    <input type="checkbox" name="perishable"><label for="perishable">Perishable?</label></br>
+                                <form id='form-vegetables' autocomplete='off'>
+                                    <div class='autocomplete' style='width:100%;'>
+                                        <input id='myVegetablesInput' type="text" name="input-vegetables" placeholder="Enter a vegetable">
+                                    </div>
+                                    </br>
+                                    <input type="date" name="date-of-vegetable" placeholder="Enter the date you bought your vegetable">
+                                    </br>
                                     <input type="submit" value="Done">
                                 </form>
                              </div>
