--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -10,12 +10,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   </head>
-  
+
   <body>
 
     <div class="fridge_container">
-        <a href="./login.html"><img id="logout" src="../images/exit_swing.png" alt="logout"></a>
-        <img id="camera" class="btn resize hover" data-toggle="modal" src="../images/photo-camera.png" alt="scan"/>
+        <!--<a href="./login.html"> -->
+          <img class="btn" id="logout" src="../images/exit_swing.png" alt="logout">
+        <a href="fridge_scanner.php"><img id="camera" class="btn resize hover" data-toggle="modal" src="../images/photo-camera.png" alt="scan"/></a>
             <!-- Modal MEATS-->
             <img id="steak" class="btn btn-meats resize hover" href="#success" data-toggle="modal" src="../images/steak.png" alt="meat"/>
             <div class="modal fade" id="success" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -203,5 +204,6 @@
     firebase.initializeApp(config);
   </script>
 <script src="../scripts/Fridge.js"></script>
+
 </body>
 </html>
