Changed some styling, and in the middle of adding images to inputs

--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -39,6 +39,7 @@
                                         <input id='myMeatsInput' type="text" name="input-meats" placeholder="Enter a meat/legume">
                                     </div>
                                     </br>
+                                    <img class='input-icon'/>
                                     <input type="date" name="date-of-meat" placeholder="Enter the date you bought your meat/legume">
                                     </br>
                                     <input type="submit" value="Done">
