Added places input images and fixed regress by removing the Auth() wrapper

--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -15,7 +15,7 @@
     
     <div class="fridge_container">
         <a href="./login.html"><img id="logout" src="../images/exit_swing.png" alt="logout" onclick=logOut()></a>
-        <a href="fridge_scanner.php"></a><img id="camera" class="btn resize hover" data-toggle="modal" src="../images/photo-camera.png" alt="scan"/>
+        <a href="fridge_scanner.php"><img id="camera" class="btn resize hover" data-toggle="modal" src="../images/photo-camera.png" alt="scan"/></a>
             <!-- Modal MEATS-->
             <img id="steak" class="btn btn-meats resize hover" href="#success" data-toggle="modal" src="../images/steak.png" alt="meat"/>
             <div class="modal fade" id="success" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -76,6 +76,7 @@
                                         <input id='myGrainsInput' type="text" name="input-grains" placeholder="Enter a grain">
                                     </div>
                                     </br>
+                                    <img class='input-icon'/>
                                     <input type="date" name="date-of-grains" placeholder="Enter the date you bought your grain">
                                     </br>
                                     <input type="submit" value="Done">
@@ -110,6 +111,7 @@
                                         <input id='myDairyInput' type="text" name="input-dairy" placeholder="Enter a dairy product">
                                     </div>
                                     </br>
+                                    <img class='input-icon'/>
                                     <input type="date" name="date-of-dairy" placeholder="Enter the date you bought your dairy product">
                                     </br>
                                     <input type="submit" value="Done">
@@ -144,6 +146,7 @@
                                         <input id='myFruitsInput' type="text" name="input-fruits" placeholder="Enter a fruit">
                                     </div>
                                     </br>
+                                    <img class='input-icon'/>
                                     <input type="date" name="date-of-fruit" placeholder="Enter the date you bought your fruit">
                                     </br>
                                     <input type="submit" value="Done">
@@ -178,6 +181,7 @@
                                         <input id='myVegetablesInput' type="text" name="input-vegetables" placeholder="Enter a vegetable">
                                     </div>
                                     </br>
+                                    <img class='input-icon'/>
                                     <input type="date" name="date-of-vegetable" placeholder="Enter the date you bought your vegetable">
                                     </br>
                                     <input type="submit" value="Done">
