Media Queries for iPhone5,SE, 6, 7, 8, 6Plus, 7Plus, 8Plus

--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -126,7 +126,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <img id="apple" class="btn btn-fruits resize hover" href="#warning" data-toggle="modal" src="../images/bananas.png" alt="fruit"/>
+            <img id="banana" class="btn btn-fruits resize hover" href="#warning" data-toggle="modal" src="../images/bananas.png" alt="fruit"/>
             <!-- Modal -->
             <div class="modal fade" id="warning" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
