More media queiries added, delete button deletes from database

--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -4,6 +4,12 @@
     <title> Fridge_Page3 </title>
     <meta charset="utf-8"/>
     <link href="../css/fridgepg3.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 320px) and (max-device-width: 568px)" href="../css/fridgepg3.css" />
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 360px) and (max-device-width: 640px)" href="../css/fridgepg3.css" />
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 375px) and (max-device-width: 667px)" href="../css/fridgepg3.css" />
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 375px) and (max-device-width: 812px)" href="../css/fridgepg3.css" />
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 411px) and (max-device-width: 731px)" href="../css/fridgepg3.css" />
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 414px) and (max-device-width: 736px)" href="../css/fridgepg3.css" />
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
