Manually add items is functional, fixed Deselect All bug when deleting.

--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -42,11 +42,11 @@
                             <div id="add-slider-meats">
                                 <form id='form-meats' autocomplete='off'>
                                     <div class='autocomplete' style='width:100%;'>
-                                        <input id='myMeatsInput' type="text" name="input-meats" placeholder="Enter a meat/legume">
+                                        <input id='myMeatsInput' type="text" name="input-meats" placeholder="Enter a meat/legume" required='' oninvalid="this.setCustomValidity('Please Enter a Meat or Legume Product')" oninput="setCustomValidity('')">
                                     </div>
                                     </br>
                                     <img class='input-icon'/>
-                                    <input type="date" name="date-of-meat" placeholder="Enter the date you bought your meat/legume">
+                                    <input type="date" id="dateAddedMeats" name='date-added-meats' placeholder="Enter the date you bought your meat/legume">
                                     </br>
                                     <input type="submit" value="Done">
                                 </form>
@@ -79,11 +79,11 @@
                             <div id="add-slider-grains">
                                 <form id='form-grains' autocomplete='off'>
                                     <div class='autocomplete' style='width:100%;'>
-                                        <input id='myGrainsInput' type="text" name="input-grains" placeholder="Enter a grain">
+                                        <input id='myGrainsInput' type="text" name="input-grains" placeholder="Enter a grain" required='' oninvalid="this.setCustomValidity('Please Enter a Rice or Grain Product')" oninput="setCustomValidity('')">
                                     </div>
                                     </br>
                                     <img class='input-icon'/>
-                                    <input type="date" name="date-of-grains" placeholder="Enter the date you bought your grain">
+                                    <input type="date" id="dateAddedGrains" name='date-added-grains' placeholder="Enter the date you bought your grain">
                                     </br>
                                     <input type="submit" value="Done">
                                 </form>
@@ -114,11 +114,11 @@
                             <div id="add-slider-dairy" class="add-slider">
                                 <form id='form-dairy' autocomplete='off'>
                                     <div class='autocomplete' style='width:100%;'>
-                                        <input id='myDairyInput' type="text" name="input-dairy" placeholder="Enter a dairy product">
+                                        <input id='myDairyInput' type="text" name="input-dairy" placeholder="Enter a dairy product" required='' oninvalid="this.setCustomValidity('Please Enter a Dairy Product')" oninput="setCustomValidity('')">
                                     </div>
                                     </br>
                                     <img class='input-icon'/>
-                                    <input type="date" name="date-of-dairy" placeholder="Enter the date you bought your dairy product">
+                                    <input type="date" id="dateAddedDairy" name='date-added-dairy' placeholder="Enter the date you bought your dairy product">
                                     </br>
                                     <input type="submit" value="Done">
                                 </form>
@@ -149,11 +149,11 @@
                             <div id="add-slider-fruits">
                                 <form id='form-fruits' autocomplete='off'>
                                     <div class='autocomplete' style='width:100%;'>
-                                        <input id='myFruitsInput' type="text" name="input-fruits" placeholder="Enter a fruit">
+                                        <input id='myFruitsInput' type="text" name="input-fruits" placeholder="Enter a fruit" required='' oninvalid="this.setCustomValidity('Please Enter a Fruit Product')" oninput="setCustomValidity('')">
                                     </div>
                                     </br>
                                     <img class='input-icon'/>
-                                    <input type="date" name="date-of-fruit" placeholder="Enter the date you bought your fruit">
+                                    <input type="date" id="dateAddedFruits" name='date-added-fruits' placeholder="Enter the date you bought your fruit">
                                     </br>
                                     <input type="submit" value="Done">
                                 </form>
@@ -184,11 +184,11 @@
                             <div id="add-slider-vegetables">
                                 <form id='form-vegetables' autocomplete='off'>
                                     <div class='autocomplete' style='width:100%;'>
-                                        <input id='myVegetablesInput' type="text" name="input-vegetables" placeholder="Enter a vegetable">
+                                        <input id='myVegetablesInput' type="text" name="input-vegetables" placeholder="Enter a vegetable" required='' oninvalid="this.setCustomValidity('Please Enter a Vegetable Product')" oninput="setCustomValidity('')">
                                     </div>
                                     </br>
                                     <img class='input-icon'/>
-                                    <input type="date" name="date-of-vegetable" placeholder="Enter the date you bought your vegetable">
+                                    <input type="date" id="dateAddedVegetables" name='date-added-vegetables' placeholder="Enter the date you bought your vegetable">
                                     </br>
                                     <input type="submit" value="Done">
                                 </form>
