--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -41,14 +41,15 @@
                         <div class="modal-body-meats">
                             <div id="add-slider-meats">
                                 <form id='form-meats' autocomplete='off'>
-                                    <div class='autocomplete' style='width:100%;'>
-                                        <input id='myMeatsInput' type="text" name="input-meats" placeholder="Enter a meat/legume" required='' oninvalid="this.setCustomValidity('Please Enter a Meat or Legume Product')" oninput="setCustomValidity('')">
+                                    <div class='autocomplete form-group'>
+                                        <label class='input-label' for='input-meats'>Enter a Meat / Legume</label></br>
+                                        <img src="../images/packed-sausage.png" class='input-icon'/><input id='myMeatsInput' type="text" name="input-meats" placeholder="  Meat / Legume" required='' oninvalid="this.setCustomValidity('Please Enter a Meat or Legume Product')" oninput="setCustomValidity('')">
                                     </div>
-                                    </br>
-                                    <img class='input-icon'/>
-                                    <input type="date" id="dateAddedMeats" name='date-added-meats' placeholder="Enter the date you bought your meat/legume">
-                                    </br>
-                                    <input type="submit" value="Done">
+                                    <div class='form-group'>
+                                        <label class='input-label' for='date-added-meats'>Date</label></br>   
+                                        <img src='../images/calendar.png' class='input-icon'/><input type="date" id="dateAddedMeats" name='date-added-meats' placeholder="Enter the date you bought your meat/legume">
+                                    </div></br>
+                                    <input type="submit" value="Add Item">
                                 </form>
                             </div>
                         </div>
@@ -226,6 +227,14 @@
     firebase.initializeApp(config);
   </script>
 <script src="../scripts/Fridge.js"></script>
+<div id="google_translate_element"></div>
 
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
