Added getExpiryDate() function and changed 'Date' to 'Expiry Date' on modal forms

--- a/Website/html/fridgepg3.html
+++ b/Website/html/fridgepg3.html
@@ -47,7 +47,7 @@
                                         <i class='	fa fa-cart-plus input-icon'></i><input id='myMeatsInput' type="text" name="input-meats" placeholder="Meat / Poultry / Fish" required='' oninvalid="this.setCustomValidity('Please Enter a Meat or Legume Product')" oninput="setCustomValidity('')">
                                     </div>
                                     <div class='form-group'>
-                                        <label class='input-label' for='date-added-meats'>Date</label></br>   
+                                        <label class='input-label' for='date-added-meats'>Expiry Date</label></br>   
                                         <i class='fa fa-calendar input-icon'></i><input type="date" id="dateAddedMeats" name='date-added-meats'>
                                     </div></br>
                                     <input type="submit" value="Add Item"></br></br>
@@ -84,7 +84,7 @@
                                         <label class='input-label' for='input-grains'>Please Enter a Grain</label></br>
                                         <i class='	fa fa-cart-plus input-icon'></i><input id='myGrainsInput' type="text" name="input-grains" placeholder="Grain" required='' oninvalid="this.setCustomValidity('Please Enter a Meat or Legume Product')" oninput="setCustomValidity('')">                                        </div>
                                     <div class='form-group'>
-                                        <label class='input-label' for='date-added-grains'>Date</label></br>   
+                                        <label class='input-label' for='date-added-grains'>Expiry Date</label></br>   
                                         <i class='fa fa-calendar input-icon'></i><input type="date" id="dateAddedGrains" name='date-added-grains'>
                                     </div></br>
                                     <input type="submit" value="Add Item"></br></br>
@@ -119,7 +119,7 @@
                                         <label class='input-label' for='input-dairy'>Please Enter a Dairy Product</label></br>
                                         <i class='	fa fa-cart-plus input-icon'></i><input id='myDairyInput' type="text" name="input-dairy" placeholder="Dairy" required='' oninvalid="this.setCustomValidity('Please Enter a Meat or Legume Product')" oninput="setCustomValidity('')">                                        </div>
                                     <div class='form-group'>
-                                        <label class='input-label' for='date-added-dairy'>Date</label></br>
+                                        <label class='input-label' for='date-added-dairy'>Expiry Date</label></br>
                                         <i class='fa fa-calendar input-icon'></i><input type="date" id="dateAddedDairy" name='date-added-dairy'>
                                     </div></br>
                                     <input type="submit" value="Add Item"></br></br>
@@ -155,7 +155,7 @@
                                         <i class='	fa fa-cart-plus input-icon'></i><input id='myFruitsInput' type="text" name="input-fruits" placeholder="Fruit" required='' oninvalid="this.setCustomValidity('Please Enter a Meat or Legume Product')" oninput="setCustomValidity('')">
                                     </div>
                                     <div class='form-group'>
-                                        <label class='input-label' for='date-added-fruits'>Date</label></br>
+                                        <label class='input-label' for='date-added-fruits'>Expiry Date</label></br>
                                         <i class='fa fa-calendar input-icon'></i><input type="date" id="dateAddedFruits" name='date-added-fruits'>
                                      </div></br>
                                     <input type="submit" value="Add Item"></br></br>
@@ -191,7 +191,7 @@
                                         <i class='	fa fa-cart-plus input-icon'></i><input id='myVegetablesInput' type="text" name="input-vegetables" placeholder="Vegetable" required='' oninvalid="this.setCustomValidity('Please Enter a Meat or Legume Product')" oninput="setCustomValidity('')">
                                     </div>
                                     <div class='form-group'>
-                                        <label class='input-label' for='date-added-vegetables'>Date</label></br>
+                                        <label class='input-label' for='date-added-vegetables'>Expiry Date</label></br>
                                         <i class='fa fa-calendar input-icon'></i><input type="date" id="dateAddedVegetables" name='date-added-vegetables'>
                                     </div></br>
                                     <input type="submit" value="Add Item"></br></br>
