--- a/Website/fridgepg3.html
+++ b/Website/fridgepg3.html
@@ -3,13 +3,13 @@
   <head>
     <title> Fridge_Page3 </title>
     <meta charset="utf-8"/>
-    <link href="../css/fridgepg3.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 320px) and (max-device-width: 568px)" href="../css/fridgepg3.css" />
-    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 360px) and (max-device-width: 640px)" href="../css/fridgepg3.css" />
-    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 375px) and (max-device-width: 667px)" href="../css/fridgepg3.css" />
-    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 375px) and (max-device-width: 812px)" href="../css/fridgepg3.css" />
-    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 411px) and (max-device-width: 731px)" href="../css/fridgepg3.css" />
-    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 414px) and (max-device-width: 736px)" href="../css/fridgepg3.css" />
+    <link href="./css/fridgepg3.css" rel="stylesheet">
+ <!--   <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 320px) and (max-device-width: 568px)" href="./css/fridgepg3.css" />
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 360px) and (max-device-width: 640px)" href="./css/fridgepg3.css" />
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 375px) and (max-device-width: 667px)" href="./css/fridgepg3.css" />
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 375px) and (max-device-width: 812px)" href="./css/fridgepg3.css" />
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 411px) and (max-device-width: 731px)" href="./css/fridgepg3.css" />
+    <link rel="stylesheet" type="text/css" media="screen and (min-device-width: 414px) and (max-device-width: 736px)" href="./css/fridgepg3.css" />-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -21,10 +21,10 @@
   <body>
     
     <div class="fridge_container">
-        <img id="logout" src="../images/exit_swing.png" alt="logout" onclick='logOut();'>
-        <a href="fridge_scanner.php"><img id="camera" class="btn resize hover" data-toggle="modal" src="../images/photo-camera.png" alt="scan"/></a>
+        <img id="logout" src="./images/exit_swing.png" alt="logout" onclick='logOut();'>
+        <a href="fridge_scanner.php"><img id="camera" class="btn resize hover" data-toggle="modal" src="./images/photo-camera.png" alt="scan"/></a>
             <!-- Modal MEATS-->
-            <img id="steak" class="btn btn-meats resize hover" href="#success" data-toggle="modal" src="../images/steak.png" alt="meat"/>
+            <img id="steak" class="btn btn-meats resize hover" href="#success" data-toggle="modal" src="./images/steak.png" alt="meat"/>
             <div class="modal fade" id="success" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
@@ -37,7 +37,7 @@
                             <span id="cancel-button-meats" class="disabled hidden">Cancel</span>
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i>Meats</i></h1>
-                            <img id="plus-meats" class="btn add" data-toggle="modal" src="../images/plus-symbol-in-a-rounded-black-square.png" alt="manually add foods"/>
+                            <img id="plus-meats" class="btn add" data-toggle="modal" src="./images/plus-symbol-in-a-rounded-black-square.png" alt="manually add foods"/>
                         </div>
                         <div class="modal-body-meats">
                             <div id="add-slider-meats">
@@ -64,7 +64,7 @@
             </div><!-- /.modal MEATS -->
 
             <!-- Modal -->
-            <img id="toast" class="btn btn-grains resize hover" href="#primary" data-toggle="modal" src="../images/toast.png" alt="grain"/>
+            <img id="toast" class="btn btn-grains resize hover" href="#primary" data-toggle="modal" src="./images/toast.png" alt="grain"/>
             <!-- Modal -->
             <div class="modal fade" id="primary" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -75,7 +75,7 @@
                             <span id="cancel-button-grains" class="disabled hidden">Cancel</span>
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i>Grains</i></h1>
-                            <img id="plus-grains" class="btn add" data-toggle="modal" src="../images/plus-symbol-in-a-rounded-black-square.png" alt="manually add foods"/>
+                            <img id="plus-grains" class="btn add" data-toggle="modal" src="./images/plus-symbol-in-a-rounded-black-square.png" alt="manually add foods"/>
                         </div>
                         <div class="modal-body-grains">
                             <div id="add-slider-grains">
@@ -99,7 +99,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <img id="milk" class="btn btn-dairy resize hover" href="#info" data-toggle="modal" src="../images/milk.png" alt="dairy"/>
+            <img id="milk" class="btn btn-dairy resize hover" href="#info" data-toggle="modal" src="./images/milk.png" alt="dairy"/>
             <!-- Modal -->
             <div class="modal fade" id="info" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -110,7 +110,7 @@
                             <span id="cancel-button-dairy" class="disabled hidden">Cancel</span>
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i>Dairy</i></h1>
-                            <img id="plus-dairy" class="btn add" data-toggle="modal" src="../images/plus-symbol-in-a-rounded-black-square.png" alt="manually add foods"/>
+                            <img id="plus-dairy" class="btn add" data-toggle="modal" src="./images/plus-symbol-in-a-rounded-black-square.png" alt="manually add foods"/>
                         </div>
                         <div class="modal-body-dairy">
                             <div id="add-slider-dairy" class="add-slider">
@@ -134,7 +134,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <img id="banana" class="btn btn-fruits resize hover" href="#warning" data-toggle="modal" src="../images/bananas.png" alt="fruit"/>
+            <img id="banana" class="btn btn-fruits resize hover" href="#warning" data-toggle="modal" src="./images/bananas.png" alt="fruit"/>
             <!-- Modal -->
             <div class="modal fade" id="warning" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -145,7 +145,7 @@
                             <span id="cancel-button-fruits" class="disabled hidden">Cancel</span>
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i>Fruits</i></h1>
-                            <img id="plus-fruits" class="btn add" data-toggle="modal" src="../images/plus-symbol-in-a-rounded-black-square.png" alt="manually add foods"/>
+                            <img id="plus-fruits" class="btn add" data-toggle="modal" src="./images/plus-symbol-in-a-rounded-black-square.png" alt="manually add foods"/>
                         </div>
                         <div class="modal-body-fruits">
                             <div id="add-slider-fruits">
@@ -170,7 +170,7 @@
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
             <!-- Modal -->
-            <img id="cabbage" class="btn btn-vegetables resize hover" href="#danger" data-toggle="modal" src="../images/cabbage.png" alt="veggies"/>
+            <img id="cabbage" class="btn btn-vegetables resize hover" href="#danger" data-toggle="modal" src="./images/cabbage.png" alt="veggies"/>
             <!-- Modal -->
             <div class="modal fade" id="danger" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -181,7 +181,7 @@
                             <span id="cancel-button-vegetables" class="disabled hidden">Cancel</span>
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                             <h1><i>Vegetables</i></h1>
-                            <img id="plus-vegetables" class="btn add" data-toggle="modal" src="../images/plus-symbol-in-a-rounded-black-square.png" alt="manually add foods"/>
+                            <img id="plus-vegetables" class="btn add" data-toggle="modal" src="./images/plus-symbol-in-a-rounded-black-square.png" alt="manually add foods"/>
                         </div>
                         <div class="modal-body-vegetables">
                             <div id="add-slider-vegetables">
@@ -241,7 +241,7 @@
     }
 
   </script>
-<script src="../scripts/Fridge.js"></script>
+<script src="./scripts/Fridge.js"></script>
 <div id="google_translate_element"></div>
 
 <script type="text/javascript">
